--- a/doc/_data/schemas/common/StabilizerConfiguration.json
+++ b/doc/_data/schemas/common/StabilizerConfiguration.json
@@ -25,6 +25,7 @@
     "vdc": {"$ref": "/../../common/vdc.json"},
     "admittance": {"$ref": "/../../common/admittance.json"},
     "dcm_tracking": {"$ref": "/../../common/dcm_tracking.json"},
-    "dcm_bias": {"$ref": "/../../common/dcm_bias.json"}
+    "dcm_bias": {"$ref": "/../../common/dcm_bias.json"},
+    "ext_wrench": {"$ref": "/../../common/ext_wrench.json"}
   }
 }
