Fix for windows build: https://github.com/jrl-umi3218/mc_rtc/pull/95#discussion_r595663059
Co-authored-by: Pierre Gergondet <pierre.gergondet+github@gmail.com>

--- a/src/mc_control/samples/ExternalForces/src/states/CMakeLists.txt
+++ b/src/mc_control/samples/ExternalForces/src/states/CMakeLists.txt
@@ -8,7 +8,7 @@ macro(add_fsm_state state_name state_SRC state_HDR)
     set_target_properties(${state_name} PROPERTIES COMPILE_FLAGS "-DMC_CONTROL_FSM_STATE_EXPORTS")
     set_target_properties(${state_name} PROPERTIES INSTALL_RPATH "${MC_STATES_RUNTIME_INSTALL_PREFIX};${MC_ExternalForces_STATES_RUNTIME_INSTALL_PREFIX}")
 
-    target_link_libraries(${state_name} PUBLIC mc_rtc::mc_control_fsm)
+    target_link_libraries(${state_name} PUBLIC mc_rtc::mc_control_fsm external_forces)
 
     install(TARGETS ${state_name}
       ARCHIVE DESTINATION "${MC_ExternalForces_STATES_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:/debug>"
