--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -105,14 +105,10 @@ jobs:
         fi
         if $USE_HEAD
         then
-          echo "BINTRAY_REPO=multi-contact-head" >> $GITHUB_ENV
-          echo "BINTRAY_VERSION=HEAD" >> $GITHUB_ENV
-          echo "EXTRA_MIRROR=https://dl.bintray.com/gergondet/multi-contact-head" >> $GITHUB_ENV
+          echo "CLOUDSMITH_REPO=mc-rtc/head" >> $GITHUB_ENV
           echo "PACKAGE_JOB=package-master" >> $GITHUB_ENV
         else
-          echo "BINTRAY_REPO=multi-contact-release" >> $GITHUB_ENV
-          echo "BINTRAY_VERSION=${REF}" >> $GITHUB_ENV
-          echo "EXTRA_MIRROR=https://dl.bintray.com/gergondet/multi-contact-release" >> $GITHUB_ENV
+          echo "CLOUDSMITH_REPO=mc-rtc/stable" >> $GITHUB_ENV
           echo "PACKAGE_JOB=package-release" >> $GITHUB_ENV
         fi
         echo "PACKAGE_UPLOAD=${PACKAGE_UPLOAD}" >> $GITHUB_ENV
@@ -160,8 +156,7 @@ jobs:
         dist: "${{ matrix.dist }}"
         arch: "${{ matrix.arch }}"
         ros-distro: "${{ env.ROS_DISTRO }}"
-        other-mirrors: "${{ env.EXTRA_MIRROR }}"
-        other-gpg-keys: '0x892EA6EE273707C6495A6FB6220D644C64666806'
+        cloudsmith-repo: "${{ env.CLOUDSMITH_REPO }}"
     - uses: actions/upload-artifact@v1
       with:
         name: packages-${{ matrix.dist }}-${{ matrix.arch }}
@@ -214,14 +209,10 @@ jobs:
         fi
         if $USE_HEAD
         then
-          echo "BINTRAY_REPO=multi-contact-head" >> $GITHUB_ENV
-          echo "BINTRAY_VERSION=HEAD" >> $GITHUB_ENV
-          echo "EXTRA_MIRROR=https://dl.bintray.com/gergondet/multi-contact-head" >> $GITHUB_ENV
+          echo "CLOUDSMITH_REPO=mc-rtc/head" >> $GITHUB_ENV
           echo "PACKAGE_JOB=package-master" >> $GITHUB_ENV
         else
-          echo "BINTRAY_REPO=multi-contact-release" >> $GITHUB_ENV
-          echo "BINTRAY_VERSION=${REF}" >> $GITHUB_ENV
-          echo "EXTRA_MIRROR=https://dl.bintray.com/gergondet/multi-contact-release" >> $GITHUB_ENV
+          echo "CLOUDSMITH_REPO=mc-rtc/stable" >> $GITHUB_ENV
           echo "PACKAGE_JOB=package-release" >> $GITHUB_ENV
         fi
         echo "PACKAGE_UPLOAD=${PACKAGE_UPLOAD}" >> $GITHUB_ENV
@@ -233,19 +224,10 @@ jobs:
     - name: Upload
       uses: jrl-umi3218/github-actions/upload-package@master
       with:
-        dist: "${{ matrix.dist }}"
-        arch: "${{ matrix.arch }}"
-        subject: gergondet
-        repo: "${{ env.BINTRAY_REPO }}"
-        package: |
-          name: mc-rtc
-          desc: "mc_rtc is an interface for simulated and real robotic systems suitable for real-time control.  It provides programmers with a simple interface to build versatile controllers as well as a set of tools to help with the development of said controllers."
-          licenses: [BSD 2-Clause]
-          vcs_url: https://github.com/jrl-umi3218/mc_rtc
-        version: "${{ env.BINTRAY_VERSION }}"
+        dist: ubuntu/${{ matrix.dist }}
+        repo: "${{ env.CLOUDSMITH_REPO }}"
         path: packages-${{ matrix.dist }}-${{ matrix.arch }}
-        BINTRAY_API_KEY: "${{ secrets.BINTRAY_API_KEY }}"
-        GPG_PASSPHRASE: "${{ secrets.GPG_PASSPHRASE }}"
+        CLOUDSMITH_API_KEY: "${{ secrets.CLOUDSMITH_API_KEY }}"
       if: env.PACKAGE_UPLOAD == 'true'
   mirror-sync-and-trigger:
     needs: upload-packages
@@ -280,22 +262,13 @@ jobs:
         fi
         if $USE_HEAD
         then
-          echo "BINTRAY_REPO=multi-contact-head" >> $GITHUB_ENV
-          echo "BINTRAY_VERSION=HEAD" >> $GITHUB_ENV
-          echo "EXTRA_MIRROR=https://dl.bintray.com/gergondet/multi-contact-head" >> $GITHUB_ENV
+          echo "CLOUDSMITH_REPO=mc-rtc/head" >> $GITHUB_ENV
           echo "PACKAGE_JOB=package-master" >> $GITHUB_ENV
         else
-          echo "BINTRAY_REPO=multi-contact-release" >> $GITHUB_ENV
-          echo "BINTRAY_VERSION=${REF}" >> $GITHUB_ENV
-          echo "EXTRA_MIRROR=https://dl.bintray.com/gergondet/multi-contact-release" >> $GITHUB_ENV
+          echo "CLOUDSMITH_REPO=mc-rtc/stable" >> $GITHUB_ENV
           echo "PACKAGE_JOB=package-release" >> $GITHUB_ENV
         fi
         echo "PACKAGE_UPLOAD=${PACKAGE_UPLOAD}" >> $GITHUB_ENV
-    - name: Request mirror sync
-      run: 'curl -ugergondet:${{ secrets.BINTRAY_API_KEY }} --header "X-GPG-PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}" -X POST https://api.bintray.com/calc_metadata/gergondet/${{ env.BINTRAY_REPO }}
-
-'
-      if: env.PACKAGE_UPLOAD == 'true'
     - name: Trigger dependents rebuild
       run: |
         curl -H "Accept: application/vnd.github.everest-preview+json" -H "Authorization: token ${{ secrets.GH_PAGES_TOKEN }}" --request POST --data "{\"event_type\": \"${PACKAGE_JOB}\"}" https://api.github.com/repos/jrl-umi3218/mc_rtc_ros/dispatches
