[cmake] Add the MC_RTC_DEVELOPER_MODE option
This option disable precise version computing so that rebuilding the
project is faster which is particularly useful when making frequent changes.

This is intended for mc_rtc developers as the information is useful to
debug ABI issues.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ option(BUILD_BENCHMARKS "Build benchmarks" OFF)
 
 option(MC_RTC_BUILD_STATIC "Build a static version of mc_rtc, this has no support for pluggable components" OFF)
 option(MC_RTC_DISABLE_NETWORK "Build without network support" OFF)
+option(MC_RTC_DEVELOPER_MODE "Disable exact version embedding to speed up recompilations" OFF)
 
 option(DISABLE_ROS "Build without ROS support (even if ROS was found)" OFF)
 
