[GUI] Add the Visual element
Allow to add arbitrary visuals to the 3D scene

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -247,6 +247,7 @@ set(mc_rtc_gui_HDR
   ../include/mc_rtc/gui/Trajectory.h
   ../include/mc_rtc/gui/Transform.h
   ../include/mc_rtc/gui/types.h
+  ../include/mc_rtc/gui/Visual.h
   ../include/mc_rtc/gui/XYTheta.h
   ../include/mc_rtc/gui/details/traits.h
 
