--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -165,6 +165,8 @@ if(NOT DEFINED PYTHON_DEB_ROOT)
   add_test(NAME TestPostureController2ControllerSwitchThreadedLog COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/check_log.py" "TestPostureController2" ${NRITER} "${UTILS_BIN_DIR}")
 endif()
 
+set(USE_SANDBOX "false")
+set(LOG_ENABLED "false")
 set(LOG_POLICY "non-threaded")
 # mc_task test controllers
 controller_test_run(TestCoMTaskController 4001)
@@ -226,6 +228,12 @@ endmacro()
 controller_sample_test_run(CoM "" 1000)
 controller_sample_test_run(EndEffector "" 1000)
 controller_sample_test_run(Posture "" 1000)
+if(ENABLE_FAST_TESTS)
+  set(ACTUALITER 5)
+else()
+  set(ACTUALITER 100)
+endif()
+add_test(NAME "test_controller_restart" COMMAND test_controller_restart ${CONFIG_OUT} ${ACTUALITER})
 controller_sample_test_run(Text "" 1000)
 file(GENERATE OUTPUT "${TEST_CONTROLLER_PATH}/etc/Text.conf" INPUT "${PROJECT_SOURCE_DIR}/src/mc_control/samples/Text/etc/Text.conf")
 
@@ -263,6 +271,7 @@ set(UPDATE_OBSERVERS "")
 if(PYTHON_BINDING)
   file(READ "ObserverPipelinesPython.json" OBSERVER_PIPELINES)
   set(USE_SANDBOX "false")
+  set(LOG_ENABLED "true")
   get_python_names(python_names)
   foreach(PYTHON ${python_names})
     set(TEST_CONTROLLER_NAME "${PYTHON}#test_python.TestPythonController")
