[cmake] Introduce MC_RTC_INSTALL_PREFIX
This allows to build mc_rtc with a given CMAKE_INSTALL_PREFIX but
relocate the package easily to a destination MC_RTC_INSTALL_PREFIX.

This is used for vcpkg packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,10 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 project(${PROJECT_NAME} C CXX)
 set(MC_RTC_SOURCE_DIR "${PROJECT_SOURCE_DIR}")
 
+if(NOT DEFINED MC_RTC_INSTALL_PREFIX)
+  set(MC_RTC_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
+endif()
+
 option(GENERATE_COVERAGE "Generate coverage data" FALSE)
 if("${CMAKE_CXX_FLAGS}" MATCHES "--coverage")
   set(GENERATE_COVERAGE TRUE CACHE BOOL "Generate coverage data" FORCE)
@@ -132,8 +136,10 @@ macro(mc_rtc_set_prefix NAME FOLDER)
   set(MC_${NAME}_LIBRARY_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/lib/${FOLDER})
   if(WIN32)
     set(MC_${NAME}_RUNTIME_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/bin/${FOLDER})
+    set(MC_${NAME}_RUNTIME_DESTINATION_PREFIX ${MC_RTC_INSTALL_PREFIX}/bin/${FOLDER})
   else()
     set(MC_${NAME}_RUNTIME_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/lib/${FOLDER})
+    set(MC_${NAME}_RUNTIME_DESTINATION_PREFIX ${MC_RTC_INSTALL_PREFIX}/lib/${FOLDER})
   endif()
   # For backward compatibility
   set(MC_${NAME}_INSTALL_PREFIX "${MC_${NAME}_LIBRARY_INSTALL_PREFIX}")
