Rename controller in plugin test
NTFS on Windows does not accept ":" in file names so we can't provide a
configuration file...

--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -306,7 +306,7 @@ set_target_properties(TestPluginController PROPERTIES
   LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/TestPluginController"
   RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/TestPluginController"
 )
-set(TEST_CONTROLLER_NAME "TestPluginController::1_2\", \"TestPluginController::2_3")
+set(TEST_CONTROLLER_NAME "TestPluginController_1_2\", \"TestPluginController_2_3")
 set(TEST_PLUGINS "Plugin0")
 set(PLUGINS_MODULE_PATH "${CMAKE_CURRENT_BINARY_DIR}/TestPlugin")
 set(TEST_CONTROLLER_PATH "${CMAKE_CURRENT_BINARY_DIR}/TestPluginController")
@@ -316,20 +316,20 @@ if(CMAKE_CONFIGURATION_TYPES)
 endif()
 set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/TestPluginController/mc_rtc-TestPluginController.conf")
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in" ${CONFIG_OUT})
-file(WRITE "${TEST_CONTROLLER_PATH}/etc/TestPluginController::1_2.yaml" "Plugins: [Plugin1, Plugin2]")
-file(WRITE "${TEST_CONTROLLER_PATH}/etc/TestPluginController::2_3.yaml" "Plugins: [Plugin2, Plugin3]")
+file(WRITE "${TEST_CONTROLLER_PATH}/etc/TestPluginController_1_2.yaml" "Plugins: [Plugin1, Plugin2]")
+file(WRITE "${TEST_CONTROLLER_PATH}/etc/TestPluginController_2_3.yaml" "Plugins: [Plugin2, Plugin3]")
 if(CMAKE_CONFIGURATION_TYPES)
   set(CONFIG_IN "${CONFIG_OUT}")
   set(CONFIG_FOLDER_OUT "${CMAKE_CURRENT_BINARY_DIR}/TestPluginController/$<CONFIGURATION>")
   set(CONFIG_OUT "${CONFIG_FOLDER_OUT}/mc_rtc-TestPluginController.conf")
   file(GENERATE OUTPUT "${CONFIG_OUT}" INPUT "${CONFIG_IN}")
   file(GENERATE
-    OUTPUT "${CONFIG_FOLDER_OUT}/etc/TestPluginController::1_2.yaml"
-    INPUT "${TEST_CONTROLLER_PATH}/etc/TestPluginController::1_2.yaml"
+    OUTPUT "${CONFIG_FOLDER_OUT}/etc/TestPluginController_1_2.yaml"
+    INPUT "${TEST_CONTROLLER_PATH}/etc/TestPluginController_1_2.yaml"
   )
   file(GENERATE
-    OUTPUT "${CONFIG_FOLDER_OUT}/etc/TestPluginController::2_3.yaml"
-    INPUT "${TEST_CONTROLLER_PATH}/etc/TestPluginController::2_3.yaml"
+    OUTPUT "${CONFIG_FOLDER_OUT}/etc/TestPluginController_2_3.yaml"
+    INPUT "${TEST_CONTROLLER_PATH}/etc/TestPluginController_2_3.yaml"
   )
 endif()
 mc_rtc_add_test(NAME TestPluginController COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" 5 TestPluginController::2_3)
