--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -310,14 +310,15 @@ set(TEST_CONTROLLER_NAME "TestPluginController_1_2\", \"TestPluginController_2_3
 set(TEST_PLUGINS "Plugin0")
 set(PLUGINS_MODULE_PATH "${CMAKE_CURRENT_BINARY_DIR}/TestPlugin")
 set(TEST_CONTROLLER_PATH "${CMAKE_CURRENT_BINARY_DIR}/TestPluginController")
+set(TEST_CONTROLLER_PATH_BASE "${TEST_CONTROLLER_PATH}")
 if(CMAKE_CONFIGURATION_TYPES)
   set(PLUGINS_MODULE_PATH "${PLUGINS_MODULE_PATH}/$<CONFIGURATION>")
   set(TEST_CONTROLLER_PATH "${TEST_CONTROLLER_PATH}/$<CONFIGURATION>")
 endif()
 set(CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/TestPluginController/mc_rtc-TestPluginController.conf")
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in" ${CONFIG_OUT})
-file(WRITE "${TEST_CONTROLLER_PATH}/etc/TestPluginController_1_2.yaml" "Plugins: [Plugin1, Plugin2]")
-file(WRITE "${TEST_CONTROLLER_PATH}/etc/TestPluginController_2_3.yaml" "Plugins: [Plugin2, Plugin3]")
+file(WRITE "${TEST_CONTROLLER_PATH_BASE}/etc/TestPluginController_1_2.yaml" "Plugins: [Plugin1, Plugin2]")
+file(WRITE "${TEST_CONTROLLER_PATH_BASE}/etc/TestPluginController_2_3.yaml" "Plugins: [Plugin2, Plugin3]")
 if(CMAKE_CONFIGURATION_TYPES)
   set(CONFIG_IN "${CONFIG_OUT}")
   set(CONFIG_FOLDER_OUT "${CMAKE_CURRENT_BINARY_DIR}/TestPluginController/$<CONFIGURATION>")
@@ -325,11 +326,11 @@ if(CMAKE_CONFIGURATION_TYPES)
   file(GENERATE OUTPUT "${CONFIG_OUT}" INPUT "${CONFIG_IN}")
   file(GENERATE
     OUTPUT "${CONFIG_FOLDER_OUT}/etc/TestPluginController_1_2.yaml"
-    INPUT "${TEST_CONTROLLER_PATH}/etc/TestPluginController_1_2.yaml"
+    INPUT "${TEST_CONTROLLER_PATH_BASE}/etc/TestPluginController_1_2.yaml"
   )
   file(GENERATE
     OUTPUT "${CONFIG_FOLDER_OUT}/etc/TestPluginController_2_3.yaml"
-    INPUT "${TEST_CONTROLLER_PATH}/etc/TestPluginController_2_3.yaml"
+    INPUT "${TEST_CONTROLLER_PATH_BASE}/etc/TestPluginController_2_3.yaml"
   )
 endif()
 mc_rtc_add_test(NAME TestPluginController COMMAND test_controller_ticker --run_test=RUN -- "${CONFIG_OUT}" 5 TestPluginController::2_3)
