--- a/src/mc_control/samples/FSM/etc/FSM.in.conf
+++ b/src/mc_control/samples/FSM/etc/FSM.in.conf
@@ -170,8 +170,10 @@
       "useCoM": false,
       "contact":
       {
-        "r1Surface": "LeftFoot",
-        "r2Surface": "AllGround",
+        "r2": "jvrc1",
+        "r1": "ground",
+        "r1Surface": "AllGround",
+        "r2Surface": "LeftFoot",
         "isFixed": false
       }
     },
@@ -247,10 +249,10 @@
       "RemoveContacts":
       [
         {
-          "r1": "jvrc1",
-          "r2": "ground",
-          "r1Surface": "RightFoot",
-          "r2Surface": "AllGround"
+          "r1": "ground",
+          "r2": "jvrc1",
+          "r1Surface": "AllGround",
+          "r2Surface": "RightFoot"
         }
       ]
     },
