[cmake] Fix Boost dynamic linking in Windows

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -117,6 +117,9 @@ add_library(mc_rtc_utils SHARED ${mc_rtc_utils_SRC} ${mc_rtc_utils_HDR})
 set_target_properties(mc_rtc_utils PROPERTIES COMPILE_FLAGS "-DMC_RTC_UTILS_EXPORTS")
 target_include_directories(mc_rtc_utils PRIVATE "${PROJECT_BINARY_DIR}/include/mc_rtc")
 target_link_libraries(mc_rtc_utils PUBLIC SpaceVecAlg::SpaceVecAlg Boost::filesystem Boost::disable_autolinking yaml-cpp spdlog::spdlog PRIVATE $<BUILD_INTERFACE:mc_rtc_3rd_party::RapidJSON>)
+if(NOT Boost_USE_STATIC_LIBS)
+  target_link_libraries(mc_rtc_utils PUBLIC Boost::dynamic_linking)
+endif()
 if(NOT MC_RTC_BUILD_STATIC)
   target_link_libraries(mc_rtc_utils PRIVATE mpack)
 else()
@@ -140,6 +143,9 @@ set(mc_rtc_loader_HDR
 add_library(mc_rtc_loader SHARED ${mc_rtc_loader_SRC} ${mc_rtc_loader_HDR})
 set_target_properties(mc_rtc_loader PROPERTIES COMPILE_FLAGS "-DMC_RTC_LOADER_EXPORTS")
 target_link_libraries(mc_rtc_loader PUBLIC Boost::filesystem Boost::disable_autolinking mc_rtc_utils)
+if(NOT Boost_USE_STATIC_LIBS)
+  target_link_libraries(mc_rtc_loader PUBLIC Boost::dynamic_linking)
+endif()
 if(NOT MC_RTC_BUILD_STATIC)
   target_link_libraries(mc_rtc_loader PUBLIC ${LTDL})
 endif()
