--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -55,6 +55,9 @@ MACRO(mc_rtc_test NAME)
     message(FATAL_ERROR "Cannot add mc_rtc_test: neither ${NAME}.cpp nor ${NAME}.in.cpp exists in ${CMAKE_CURRENT_SOURCE_DIR}")
   endif()
   target_link_libraries(${NAME} PUBLIC Boost::unit_test_framework Boost::disable_autolinking ${ARGN})
+  if(NOT Boost_USE_STATIC_LIBS)
+    target_link_libraries(${NAME} PUBLIC Boost::dynamic_linking)
+  endif()
   target_compile_definitions(${NAME} PRIVATE -DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)
   target_include_directories(${NAME} PRIVATE ${CONFIG_HEADER_INCLUDE_DIR})
   target_include_directories(${NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
@@ -100,6 +103,9 @@ file(GENERATE
 add_executable(test_controller_ticker test_controller_ticker.cpp)
 set_target_properties(test_controller_ticker PROPERTIES FOLDER tests/ticker)
 target_link_libraries(test_controller_ticker PUBLIC mc_control Boost::unit_test_framework Boost::disable_autolinking)
+if(NOT Boost_USE_STATIC_LIBS)
+  target_link_libraries(test_controller_ticker PUBLIC Boost::dynamic_linking)
+endif()
 target_compile_definitions(test_controller_ticker PRIVATE -DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)
 target_include_directories(test_controller_ticker PRIVATE ${CONFIG_HEADER_INCLUDE_DIR})
 # Adding a project configuration file (for MSVC only)
