--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -37,6 +37,9 @@ macro(controller_test_common NAME)
   endif()
   add_library(${NAME} SHARED ${${NAME}_SRC})
   target_link_libraries(${NAME} PUBLIC mc_control Boost::unit_test_framework)
+  if(NOT Boost_USE_STATIC_LIBS)
+    target_link_libraries(${NAME} PUBLIC Boost::dynamic_linking)
+  endif()
   target_include_directories(${NAME} PRIVATE ${CMAKE_SOURCE_DIR}/tests)
   set(CONFIG_HEADER_INCLUDE_DIR "${CMAKE_BINARY_DIR}/tests/include/$<CONFIGURATION>")
   target_include_directories(${NAME} PRIVATE ${CONFIG_HEADER_INCLUDE_DIR})
