[doc] Add a tutorial on using global plugins

--- a/doc/_data/tutorials.yml
+++ b/doc/_data/tutorials.yml
@@ -47,6 +47,9 @@
     -
       id: ros
       title: ROS integration
+    -
+      id: global-plugins
+      title: Using global plugins
 -
   id: tools
   title: Framework tools
