--- a/CMakeModules/CMakeLists.txt
+++ b/CMakeModules/CMakeLists.txt
@@ -5,6 +5,7 @@
 set(MODULE_FILES
   Findmc_rtc_3rd_party_geos.cmake
   Findmc_rtc_3rd_party_hpp-spline.cmake
+  Findmc_rtc_3rd_party_ndcurves.cmake
 )
 
 if(NOT MC_RTC_DISABLE_NETWORK)
