[ndcurves] Replace hpp-spline with ndcurves for ExactCubic

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,8 +99,7 @@ jobs:
           - path: gabime/spdlog
             ref: v1.6.1
             options: -DSPDLOG_BUILD_EXAMPLE:BOOL=OFF -DSPDLOG_BUILD_SHARED:BOOL=ON
-          - path: humanoid-path-planner/hpp-spline
-            ref: v4.7.0
+          - path: loco-3d/hpp-spline
             options: -DBUILD_PYTHON_INTERFACE:BOOL=OFF
           - path: jrl-umi3218/Eigen3ToPython
           - path: jrl-umi3218/SpaceVecAlg
