[ci/ndcurves] Update package dependency to libndcurves-dev

--- a/debian/control
+++ b/debian/control
@@ -40,7 +40,7 @@ Build-Depends: debhelper (>= 9),
                python-mc-rbdyn-urdf,
                python3-mc-rbdyn-urdf,
                libnanomsg-dev,
-               libhpp-spline-dev,
+               libndcurves-dev,
                libyaml-cpp-dev,
                libspdlog-dev,
 # ros-@ROS_DISTRO@-ros-base,
@@ -66,7 +66,7 @@ Depends: cmake,
          libstate-observation-dev,
          libgeos++-dev,
          libnanomsg-dev,
-         libhpp-spline-dev,
+         libndcurves-dev,
          libyaml-cpp-dev,
          libspdlog-dev,
          libltdl-dev,
