Only add -march=sse2 if supported

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,13 +6,20 @@ set(MC_RTC_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../include")
 
 set(VERSION_SCRIPT_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/version-script.lds")
 
+if(UNIX AND NOT EMSCRIPTEN)
+  include(CheckCXXSourceCompiles)
+  check_cxx_compiler_flag("-msse2" SSE2_SUPPORTED)
+endif()
+
 macro(install_mc_rtc_lib_common MC_LIB KWD)
   target_include_directories(${MC_LIB} INTERFACE $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${MC_RTC_INCLUDE_DIR}>)
   if(NOT EMSCRIPTEN)
     if(WIN32)
       target_compile_definitions(${MC_LIB} ${KWD} "-DNOMINMAX"  "-D_ENABLE_EXTENDED_ALIGNED_STORAGE")
     else()
-      target_compile_options(${MC_LIB} ${KWD} "-mfpmath=sse" "-msse2")
+      if(SSE2_SUPPORTED)
+        target_compile_options(${MC_LIB} ${KWD} "-mfpmath=sse" "-msse2")
+      endif()
     endif()
   else()
     target_compile_options(${MC_LIB} ${KWD} -matomics -s USE_PTHREADS=1)
