--- a/tests/controllers/mc_rtc.conf.in
+++ b/tests/controllers/mc_rtc.conf.in
@@ -21,5 +21,5 @@
   "ObserverModulePaths": ["@OBSERVER_MODULE_PATH@"],
   "ClearGlobalPluginPath": true,
   "GlobalPluginPaths": ["@PLUGINS_MODULE_PATH@"],
-  "Plugins": ["@TEST_PLUGINS@"]
+  "Plugins": [@TEST_PLUGINS@]
 }
