--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ add_project_dependency(state-observation REQUIRED)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/CMakeModules)
 
-find_package(mc_rtc_3rd_party_ndcurves REQUIRED)
+find_package(ndcurves REQUIRED)
 
 if(NOT MC_RTC_BUILD_STATIC)
   # LTDL (defines target: mc_rtc_3rd_party::ltdl)
